--- a/MainFormU.fmx
+++ b/MainFormU.fmx
@@ -8,4 +8,10 @@ object Form21: TForm21
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   DesignerMasterStyle = 0
+  object Button1: TButton
+    Position.X = 272.000000000000000000
+    Position.Y = 184.000000000000000000
+    TabOrder = 1
+    Text = 'Button1'
+  end
 end
